discussion/kv_engine/128637/128637_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Make EPBucket::getFileStats use stats.def.h and StatCollector

Change-Id: I85e683edb403ac9a084df169396d76906791e501

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-06-03 14:50:32.000000000
Message: 
Uploaded patch set 7: New patch set was added with same tree, parent, and commit message as Patch Set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-03 15:42:52.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2528/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:6: error: unknown type name "ep_db_data_size" [clang-diagnostic-error]
STAT(ep_db_data_size, bytes)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:23: error: unknown type name "bytes" [clang-diagnostic-error]
STAT(ep_db_data_size, bytes)
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:63:1: error: expected function body after function declarator [clang-diagnostic-error]
STAT(ep_db_file_size, bytes)
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2528/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:6:
error: unknown type name "ep_db_data_size" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2528/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24365/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24365/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1043/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
